# Mp4DualPlayer

./: .gitignore  AdvancedEnhancements.md  CMakeLists.txt  README.md  README_LINUX.md  ToDo.md  build.bat  build.sh  build_linux.sh  build_release.bat  clean_build.bat  mpeg4player.desktop.in  run_software.bat
.github/workflows/: ci.yml
docs/: README.md
src/: advanced_cpp_features.h  main.cpp  mainwindow.cpp  mainwindow.h  mediawidget.cpp  mediawidget.h  videowidget_qt.cpp  videowidget_qt.h
